SalesforceProject2/src/objects/LongObject__c.object
<CustomObject>
    <fields>
        <fullName>Text0__c</fullName>
        <label>Text0</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text10__c</fullName>
        <label>Text10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text11__c</fullName>
        <label>Text11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TextTest1__c</fullName>
        <label>TextTest1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>text_diz0__c</fullName>
        <label>text_diz0</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>text_diz1__c</fullName>
        <label>text_diz1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text_diz2__c</fullName>
        <label>text_diz2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>LongObject</label>
    <nameField>
        <label>LongObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LongObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>